--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-db_url= "mongodb+srv://harshillakhani009:harshillakhani009@cluster0.pukbpzd.mongodb.net/?retryWrites=true&w=majority"
+db_url=
 key="private"
 
 # razorpay
-razorpay_id_key="rzp_test_xJoDHvUyuQGUc1"
-razorpay_secret_key="Bf5DdGBxHdt6hmWctxTWRd97"
+razorpay_id_key=
+razorpay_secret_key=
